validate controlled resource region